fixing according to java 11